# MessageSendingService

./: .env.example  README.md  pyproject.toml
config/: settings.py  urls.py
db_fixtures/: mailing_attempt_fixtures.json  mailing_fixtures.json  message_fixtures.json  recipients_fixtures.json
mailing/: forms.py  models.py  services.py  urls.py  validators.py  views.py
mailing/management/commands/: add_managers.py  load_test_data.py  start_mailing.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_mailing_is_disabled.py  0003_recipients_mailer_alter_recipients_email.py  0004_alter_mailing_end_at_alter_mailing_start_at.py
mailing/src/: cache_decorators.py  mailing_attempt_log.py  mailing_handlers.py  queries.py  validators.py
mailing/templates/mailing/: base.html  home.html  mailing_attempt.html  mailing_attempt_failed.html  mailing_attempt_success.html  mailing_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_delete.html  message_detail.html  message_form.html  message_list.html  recipient_delete.html  recipient_detail.html  recipient_form.html  recipients_list.html  statistics.html  statistics_failed.html  statistics_success.html
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: base.html  login.html  password_change.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  registration.html  user_detail.html  user_update.html  (+1 more)
(+2 files in other folders)
